--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
@@ -15,7 +17,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "request": "~2.83.0",
-    "semantic-ui-react": "^0.83.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "spotify-web-api-js": "^1.1.1"
   },
   "scripts": {
