--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "spotify-web-api-js": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start & node webapi/authorization_code/app.js",
+    "start": "node webapi/authorization_code/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
